Add effect on wizard cards and start rogue one

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -126,7 +126,7 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2554,Y=1360)
+LastSize=(X=2554,Y=1352)
 LastExecutedLaunchDevice=Windows@PC-THEO
 LastExecutedLaunchName=PC-THEO
 LastExecutedPIEPreviewDevice=
@@ -134,7 +134,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=2554
-NewWindowHeight=1360
+NewWindowHeight=1352
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -364,6 +364,13 @@ WBP_FireBall_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper
 EnergyCheck=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 EnergyCheck_15=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 WBP_ThunderBolt_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+WBP_Heal_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+K2Node_Tunnel=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+WBP_SneackAttack_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+WBP_Ambush_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+WBP_Hide_C=
+ApplyEffect=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+ApplyEffect_3=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 
 [EditorStartup]
 LastLevel=/Game/Map
@@ -371,26 +378,26 @@ LastLevel=/Game/Map
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=DataTableEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=DataTableEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
@@ -404,13 +411,12 @@ RecentAssetEditors=UserDefinedStructureEditor
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Board.WBP_Board
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
-OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Line.WBP_Line
-OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_CardHand.WBP_CardHand
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack.WBP_SneackAttack
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection.WBP_Protection
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide.WBP_Hide
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
-OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall.WBP_FireBall
-OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt.WBP_ThunderBolt
+OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush.WBP_Ambush
 OpenAssetsAtExit=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard.WBP_SlashCard
-OpenAssetsAtExit=/Game/Blueprints/Tuto/DT_CardParamWizard.DT_CardParamWizard
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -423,27 +429,27 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem0=/Game/Blueprints/Tuto/DT_CardParamRogue
 MRUItem1=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem2=/Game/Blueprints/Tuto/DT_CardParamWizard
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
+MRUItem3=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
 MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Protection
-MRUItem6=/Game/Blueprints/Tuto/DT_CardParamWarrior
+MRUItem6=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_Equipment
 MRUItem7=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem8=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem9=/Game/Blueprints/Widget/WBP_Line
-MRUItem10=/Game/Blueprints/Tuto/BPI_AddCard
-MRUItem11=/Game/Blueprints/BP_PlayerController
-MRUItem12=/Game/Blueprints/Widget/WBP_Card
-MRUItem13=/Game/Blueprints/Widget/WBP_Board
-MRUItem14=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem15=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
-MRUItem16=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Hide
-MRUItem17=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
-MRUItem18=/Game/Blueprints/Tuto/Cards
-MRUItem19=/Game/Blueprints/Tuto/PrimaryDataAsset
-MRUItem20=/Game/Blueprints/Tuto/DT_CardParamRogue
+MRUItem8=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem9=/Game/Blueprints/Tuto/DT_CardParamWizard
+MRUItem10=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
+MRUItem11=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem12=/Game/Blueprints/BP_PlayerController
+MRUItem13=/Game/Blueprints/Widget/WBP_Card
+MRUItem14=/Game/Blueprints/Widget/WBP_Board
+MRUItem15=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem16=/Game/Blueprints/Widget/WBP_Line
+MRUItem17=/Game/Blueprints/Tuto/DT_CardParamWarrior
+MRUItem18=/Game/Blueprints/Tuto/BPI_AddCard
+MRUItem19=/Game/Blueprints/Tuto/Cards
+MRUItem20=/Game/Blueprints/Tuto/PrimaryDataAsset
 MRUItem21=/Game/Blueprints/BPFL_Card
 MRUItem22=/Game/Blueprints/Tuto/DT_CardParam
 MRUItem23=/Game/Blueprints/Widget/WBP_SpellCard
@@ -570,21 +576,21 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Tuto/CardEffect/Warrior
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Warrior
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect
+ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Rogue
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Wizard
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Warrior
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Textures/Warrior
-ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Tuto/CardEffect/Rogue
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Inputs
 ContentBrowserDrawer.JumpMRU=/All
@@ -1547,6 +1553,21 @@ WBP_ThunderBolt_C.Rendering=True
 WBP_ThunderBolt_C.Navigation=True
 WBP_ThunderBolt_C.Designer=True
 WBP_ThunderBolt_C.Accessibility=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1713,8 +1734,8 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/Map.Map", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=True)))))
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=336.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=1081.000 Y=1.000
+WindowSize=X=1280.000 Y=714.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2882,8 +2903,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
 LastLogListing=PIE
