set random cards and clear characters hands each time they play

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -380,25 +380,27 @@ NiagaraSystemWidget=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWr
 CheckHealthAndUpdateArray=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 Get_DeckCount_Text=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 Get_DeckCount_Text_17=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+Fill=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
+Fill_17=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.WarriorCards,PropertyWrapper.DefaultValueCategory.WizardCards,PropertyWrapper.DefaultValueCategory.CardParam,PropertyWrapper.DefaultValueCategory.RogueCards,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCards,K2Node_VariableGet.DefaultValueCategory.WizardCards,K2Node_VariableGet.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.RogueCards
 
 [EditorStartup]
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=Niagara
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -440,16 +442,16 @@ bCanPreviewSwapAspectRatio=False
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_SneackAttack
 MRUItem1=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_ThunderBolt
-MRUItem2=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
-MRUItem3=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
-MRUItem4=/Game/Blueprints/Widget/WBP_Board
-MRUItem5=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
-MRUItem6=/Game/Materials/M_TestNiagara_UI
-MRUItem7=/Game/Materials/M_TestNiagara
-MRUItem8=/Game/Materials/dotshader
-MRUItem9=/Niagara/DefaultAssets/DefaultSpriteMaterial
-MRUItem10=/Game/Blueprints/Widget/WBP_Card
-MRUItem11=/Game/Niagara/NS_Simple
+MRUItem2=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_FireBall
+MRUItem3=/Game/Blueprints/Widget/WBP_Board
+MRUItem4=/Game/Blueprints/Tuto/CardEffect/Warrior/WBP_SlashCard
+MRUItem5=/Game/Materials/M_TestNiagara_UI
+MRUItem6=/Game/Materials/M_TestNiagara
+MRUItem7=/Game/Blueprints/Widget/WBP_Card
+MRUItem8=/Game/Niagara/NS_Simple
+MRUItem9=/Game/Blueprints/Tuto/CardEffect/Wizard/WBP_Heal
+MRUItem10=/Game/Materials/dotshader
+MRUItem11=/Niagara/DefaultAssets/DefaultSpriteMaterial
 MRUItem12=/Game/Blueprints/Tuto/DT_CardParamRogue
 MRUItem13=/Game/Blueprints/Tuto/CardEffect/Rogue/WBP_Ambush
 MRUItem14=/Game/Blueprints/Tuto/WBP_SpellCardTuto
@@ -1332,6 +1334,7 @@ MaterialExpressionConstant.MaterialExpression=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -1591,7 +1594,6 @@ NiagaraSystemWidget.Performance=True
 NiagaraSystemWidget.Rendering=True
 NiagaraSystemWidget.Navigation=True
 NiagaraSystemWidget.Localization=True
-Texture2D.Interchange =True
 MaterialExpressionParticleColor.MaterialExpression=True
 MaterialExpressionMultiply.MaterialExpressionMultiply=True
 MaterialExpressionMultiply.MaterialExpression=True
@@ -2998,6 +3000,7 @@ DeleteConfirmationVariable_Warning=False
 DeleteConfirmationFunction_Warning=False
 ChangeVariableType_Warning=False
 Warning_ReparentTitle=False
+DeleteConfirmationLocal Variable_Warning=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -3188,8 +3191,8 @@ bMaterialQualityUsed[3]=0
 MaterialStatsDerivedMIOption=Ignore
 
 [NiagaraRecent_EmittersAndSystems]
-MRUItem0=/Game/Niagara/NS_SwordSlash
-MRUItem1=/Game/Niagara/NS_Simple
+MRUItem0=/Game/Niagara/NS_Simple
+MRUItem1=/Game/Niagara/NS_SwordSlash
 MRUItem2=/Niagara/DefaultAssets/Templates/Emitters/SimpleSpriteBurst
 MRUItem3=/Niagara/DefaultAssets/Templates/Emitters/ConfettiBurst
 
